# cosmic-now-playing

./: Cargo.toml  README.md
resources/: app.desktop
src/: main.rs  window.rs
