[package]
name = "cosmic-ext-applet-now-playing"
version = "0.1.1"
edition = "2024"
license = "GPL-3.0-only"
description = "A COSMIC panel applet that shows and controls currently playing media."
repository = "https://github.com/DiegoMMR/cosmic-ext-now-playing"

[dependencies]
mpris = "2.0"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
default-features = false
features = ["applet", "wayland"]